Fixed issue with copying of chars to clipboard.  This is a huge issue because selection addRange() isn't supported in chrome-based browsers.  I had to 1. add a text input element 2. set text element value to = emojis user selects, then select the input item, select all chars in input item and then copy to clipboard. 3. I hide the text input by placing it way offscreen and setting z-index -1. All this to copy chars for user.

--- a/css/main.css
+++ b/css/main.css
@@ -4,5 +4,10 @@
     max-width:600px;
     padding: 5px;
 }
-
+/* Since the #emojiList is sent way out of the viewport,
+   we use this overflow-x on body to make sure scrollbars don't show up. */
+body{overflow-x: hidden;}
 .alert{font-size:small;display:none;visibility:hidden;}
+/* emojiList is the input text box that we don't want to see but
+   has to be visibile and displayed in order to copy text */
+#emojiList{z-index:-1;position:absolute;top:25px;left:5200px;}
